--- a/SkyCastleTool/src/SkyCastleTool.mxml
+++ b/SkyCastleTool/src/SkyCastleTool.mxml
@@ -106,6 +106,51 @@
 					stream.close();
 				}
 			}
+			
+			
+			
+			//=============加密swf资源===============================
+			private function encryptionSWF():void
+			{
+				_file = new File();
+				_file.addEventListener(Event.SELECT , selectedDirHandler );
+				_file.browseForDirectory("选择文件夹");
+			}
+			private function selectedDirHandler(e:Event):void
+			{
+				var bakFile:File = new File(_file.url+"/bak");
+				if(!bakFile.exists) bakFile.createDirectory();
+				
+				var files:Array = _file.getDirectoryListing();
+				if(files){
+					var len:int = files.length ;
+					var file:File ;
+					var stream:FileStream ;
+					var bytes:ByteArray ;
+					var newFile:File ;
+					for( var i:int = 0 ; i<len; ++i)
+					{
+						file = files[i] ;
+						if(!file.isDirectory && file.extension.toLocaleLowerCase()=="swf")
+						{
+							file.copyTo( new File(bakFile.url+"/"+file.name) , true );
+							stream = new FileStream();
+							stream.open( file,FileMode.READ); ;
+							bytes = new ByteArray();
+							stream.readBytes( bytes);
+							stream.close();
+							
+							newFile = new File( file.nativePath);
+							stream = new FileStream();
+							stream.open( newFile , FileMode.WRITE);
+							stream.writeByte(1);
+							stream.writeBytes( bytes );
+							stream.close();
+						}
+					}
+					Alert.show("加密完成");
+				}
+			}
 		]]>
 	</fx:Script>
 	<s:VGroup x="0" y="0" width="100%" height="100%">
@@ -125,6 +170,7 @@
 			<s:Button height="100%" label="保存网格" click="saveGrid();"/>
 			<s:Button id="hideImpact" height="100%" label="隐藏和显示碰撞层" click="hideImpactScene();"/>
 			<s:Button id="hideForbidden" height="100%" label="隐藏和显示建筑禁止区域" click="hideForbiddenScene();"/>
+			<s:Button id="encryption" height="100%" label="加密swf资源" click="encryptionSWF();"/>
 		</s:BorderContainer>
 		<s:BorderContainer id="borderContainer" width="100%" height="100%">
 			<mx:UIComponent id="container" width="100%" height="100%"/>
