--- a/CityStoryDataTool/src/CityStoryDataTool.mxml
+++ b/CityStoryDataTool/src/CityStoryDataTool.mxml
@@ -5,11 +5,10 @@
 	
 	<fx:Script>
 		<![CDATA[
-			import flash.net.registerClassAlias;
-			
 			import mx.controls.Alert;
 			
 			private var allBuildingHash:Dictionary ;
+			private var expands:Vector.<ExpandVO> ;
 			
 			private var file:File ;
 			
@@ -17,15 +16,14 @@
 			{
 				registerClassAlias("BaseBuildingVO" , BaseBuildingVO ) ;
 				registerClassAlias("ProductVO" , ProductVO ) ;
+				registerClassAlias("ExpandVO" , ExpandVO ) ;
 			}
-					
-			
 			
 			private function selectBBV():void
 			{
 				file = new File();
 				file.addEventListener(Event.SELECT , onSelectedBBVFile );
-				file.browseForOpen("选择文件XML" , [ new FileFilter("XML文件","*.xml;*.XML")] );
+				file.browseForOpen("选择建筑配置文件" , [ new FileFilter("建筑配置文件(XML)","*.xml;*.XML")] );
 			}
 			
 			private function onSelectedBBVFile(e:Event ):void
@@ -117,6 +115,74 @@
 			
 			
 			
+			private function selectExpand():void{
+				file = new File();
+				file.addEventListener(Event.SELECT , onSelectedExpandFile );
+				file.browseForOpen("选择扩地配置文件" , [ new FileFilter("扩地配置文件(XML)","*.xml;*.XML")] );
+			}
+			private function onSelectedExpandFile(e:Event):void{
+				file.removeEventListener(Event.SELECT , onSelectedBBVFile );
+				txtExpand.text = file.name ;
+				expands = new Vector.<ExpandVO>();
+				
+				var stream:FileStream = new FileStream();
+				stream.open( file,FileMode.READ );
+				var bytes:ByteArray = new ByteArray();
+				stream.readBytes( bytes);
+				bytes.position =0  ;
+				var config:XML = XML( bytes.toString());
+				if( config)
+				{
+					var len:int = config.item.length();
+					var item:* ;
+					for( var i:int = 0 ; i<len ; ++i )
+					{
+						var expandVO:ExpandVO = new ExpandVO();
+						item = config.item[i];
+						var attNamesList:XMLList = item.@*;
+						for (var j:int = 0; j < attNamesList.length(); j++)
+						{ 
+							var key:String = attNamesList[j].name() ;
+							if( expandVO.hasOwnProperty(key)){
+								switch(typeof  expandVO[key])
+								{
+									case "string":
+										expandVO[key] = String( attNamesList[j] );
+										break ;
+									case "int":
+										expandVO[key] = String( attNamesList[j] );
+										break ;
+									case "number":
+										expandVO[key] = Number( attNamesList[j] );
+										break;
+								}
+								
+							}
+						} 
+						expands.push( expandVO );
+					}
+				}
+				else
+				{
+					trace("没有扩地数据");
+				}
+			}
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
 			
 			
 			
@@ -137,6 +203,7 @@
 				var stream:FileStream = new FileStream();
 				stream.open( file , FileMode.WRITE );
 				stream.writeObject( allBuildingHash );
+				stream.writeObject( expands );
 				stream.close();
 				Alert.show("导出成功！");
 			}
@@ -146,8 +213,11 @@
 	<fx:Declarations>
 		<!-- 将非可视元素（例如服务、值对象）放在此处 -->
 	</fx:Declarations>
-	<s:Label x="19" y="23" text="BaseBuildingVO"/>
-	<s:TextInput id="txtBBV" x="19" y="52" width="288" enabled="false"/>
+	<s:Label x="19" y="23" text="基础建筑配置"/>
+	<s:Label x="20" y="86" text="扩地配置"/>
+	<s:TextInput id="txtBBV" x="19" y="42" width="288" enabled="false"/>
 	<s:Button x="316" y="352" width="74" height="38" label="生成" click="export_clickHandler(event)"/>
-	<s:Button x="320" y="52" label="选择" click="selectBBV()"/>
+	<s:Button x="320" y="42" label="选择" click="selectBBV()"/>
+	<s:TextInput id="txtExpand" x="19" y="104" width="288" enabled="false"/>
+	<s:Button x="320" y="104" label="选择" click="selectExpand()"/>
 </s:WindowedApplication>
