--- a/CityStoryDataTool/src/CityStoryDataTool.mxml
+++ b/CityStoryDataTool/src/CityStoryDataTool.mxml
@@ -281,9 +281,71 @@
 				}
 				else
 				{
+					trace("没有Component数据");
+				}
+			}
+			
+			
+			
+			
+			
+			
+			private function selectQuest():void{
+				file = new File();
+				file.addEventListener(Event.SELECT , onSelectedQuestFile );
+				file.browseForOpen("选择任务配置文件" , [ new FileFilter("任务配置文件(XML)","*.xml;*.XML")] );
+			}
+			private function onSelectedQuestFile(e:Event):void
+			{
+				file.removeEventListener(Event.SELECT , onSelectedQuestFile );
+				txtQuest.text = file.name ;
+				
+				var stream:FileStream = new FileStream();
+				stream.open( file,FileMode.READ );
+				var bytes:ByteArray = new ByteArray();
+				stream.readBytes( bytes);
+				bytes.position =0  ;
+				var config:XML = XML( bytes.toString());
+				if( config)
+				{
+					var len:int = config.item.length();
+					var item:* ;
+					for( var i:int = 0 ; i<len ; ++i )
+					{
+						var compVO:ComponentVO = new ComponentVO();
+						item = config.item[i];
+						var attNamesList:XMLList = item.@*;
+						for (var j:int = 0; j < attNamesList.length(); j++)
+						{ 
+							var key:String = attNamesList[j].name() ;
+							if( compVO.hasOwnProperty(key)){
+								switch(typeof  compVO[key])
+								{
+									case "string":
+										compVO[key] = String( attNamesList[j] );
+										break ;
+									case "int":
+										compVO[key] = String( attNamesList[j] );
+										break ;
+									case "number":
+										compVO[key] = Number( attNamesList[j] );
+										break;
+								}
+								
+							}
+						} 
+//						compHash[compVO.name] = compVO ;
+					}
+				}
+				else
+				{
 					trace("没有玩家升级数据");
 				}
 			}
+			
+			
+			
+			
 			
 			
 			
@@ -333,4 +395,7 @@
 	<s:Label x="20" y="206" text="Component配置"/>
 	<s:TextInput id="txtComp" x="19" y="224" width="288" enabled="false"/>
 	<s:Button x="320" y="224" label="选择" click="selectComp()"/>
+	<s:Label x="20" y="266" text="任务配置"/>
+	<s:TextInput id="txtQuest" x="19" y="284" width="288" enabled="false"/>
+	<s:Button x="320" y="284" label="选择" click="selectQuest()"/>
 </s:WindowedApplication>
